# pyscal

./: .bumpversion.cfg  .coverage  .gitignore  .readthedocs.yaml  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  Welcome.md  azure-pipelines.yml  calculate_q4q6_histos.py  find_structure_probs.py  index.html  main.cpp  makefile  more_atom_manipulation.ipynb  neighbor_data.ipynb  new_features.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  steinhardt.cpp  steinhardt.h  steinhardt.py  steinhardt_binding.cpp  test.ipynb  test_steinhardt.py  update_xtals.ipynb
.ci_support/: environment.yml
.github/workflows/: build.yml  codecov.yml  continuous_integration.yml  deploy.yml  pythonpackage.yml  testing.yml
ase/: ase_integration.ipynb  conf.dump  log.lammps  n1.dump
benchmark/: test_benchmark_neighbors.py  test_benchmark_qparams.py  test_other_params.py
binder/: environment.yml  jupyterlab-workspace.json  postBuild  start
conda-recipe/: conda_upload.sh  meta.yaml
docs/: _config.yml  environment.yml  index.html  index.md  requirements.txt
examples/: 01_getting_started.ipynb  02_atoms_in_more_detail.ipynb  02_finding_neighbors.ipynb  03_01_Steinhardts_parameters_for_lammps.ipynb  03_steinhardt_parameters.ipynb  04_disorder_parameters.ipynb  05_distinguishing_solid_liquid.ipynb  06_voronoi_tessellation.ipynb  07_angular_parameters.ipynb  08_chi_params.ipynb  09_centrosymmetry_parameter.ipynb  10_short_range_order.ipynb  11_entropy_parameter.ipynb  12_calculating_energy.ipynb  13_combining_energy_enthalpy.ipynb  14_visualize_system.ipynb  15_trajectory_module.ipynb  Angular_params.ipynb  Comparison.ipynb  basic_example.ipynb  calculate_energy.ipynb  calculate_sro.ipynb  cluster.dump  conf.bcc  conf.bcc.dump  conf.fcc  conf.hcp  conf.hcp.dump  conf0.bcc  conf0.fcc  conf0.hcp  conf8k.dump  entropy_params.ipynb  example_2.ipynb  example_3.ipynb  example_chiparams.ipynb  example_energy_enthalpy.ipynb  pickling.ipynb  prototype_files.ipynb  solidliquid.ipynb  (+2 more)
joss/: paper.bib  paper.md
old_tests/: POSCAR  conf.bcc.scaled.dump  conf.lqd.Al.dump  test_angular.py  test_basic_system.py  test_chiparams.py  test_cna.py  test_crystal_structures.py  test_cubic_cell.py  test_entropy.py  test_file.py  test_formats_system.py  test_neighbors.py  test_nucsize.py  test_q10.py  test_q11.py  test_q2.py  test_q5.py  test_q8.py  test_q9.py  test_q_atom.py  test_q_system.py  test_rdf.py  test_traj_process.py
paper/: paper.bib  paper.md  paper.tex
tests/: POSCAR  bcc.cna.dump  bcc.csm.dump  conf.fcc.Al.dump  conf.primitive.bcc.supercell.dump  conf.triclinic.dump  test_adaptive.py  test_angular.py  test_basic_atom.py  test_basic_system.py  test_basic_triclinic.py  test_centrosymmetry.py  test_chiparams.py  test_cna.py  test_crystal_structures.py  test_cutoff.py  test_disorder.py  test_entropy.py  test_file.py  test_formats_system.py  test_masking.py  test_module.py  test_neighbors.py  test_nucsize.py  test_pickling.py  test_pybop_basic_atom.py  test_pybop_basic_system.py  test_pybop_basic_triclinic.py  test_pybop_core.py  test_pybop_crystal_structures.py  test_pybop_formats_system.py  test_pybop_qlist.py  test_pybop_system_neighbors.py  test_pybop_system_nucsize.py  test_pybop_system_voronoi.py  test_pybop_traj_process.py  test_pybop_volume.py  test_q10.py  test_q11.py  test_q12.py  (+21 more)
(+195 files in other folders)
